syntax = "proto3";

package user;

option go_package = "user/user";

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse) {}
  // buf:lint:ignore RPC_REQUEST_STANDARD_NAME
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse) {}
  rpc ForgotPassword(ForgotPasswordRequest) returns (ForgotPasswordResponse) {}
  rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse) {}
}

message Phone {
  uint32 country_code = 1;
  uint64 number = 2;
}

message LoginRequest {
  string username = 1;
  Phone phone = 2;
  string email = 3;
  string password = 4;
}

message LoginResponse {
  string auth_token = 1;
  string refresh_token = 2;
  User user = 3;
}

message User {
  string username = 1;
  Phone phone = 2;
  string email = 3;
  repeated string user_roles = 4;
}

message RefreshTokenRequest {
  string refresh_token = 1;
}
message RefreshTokenResponse {
  string token = 1;
}

message ForgotPasswordRequest {
  string username = 1;
  string email = 2;
  Phone phone = 3;
}

message StatusResponse {
  string message = 1;
}

message ForgotPasswordResponse {
  string message = 1;
}

message RegisterUserRequest {
  string username = 1;
  string email = 2;
  Phone phone = 3;
  string password = 4;
}

message RegisterUserResponse {
  string id = 1;
  string username = 2;
  string email = 3;
  Phone phone = 4;
  repeated string roles = 5;
}
